# orchestrator

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  repos.docker.yaml  repos.yaml
.claude/commands/: plan-reviewer.md  worktree.md
.claude/skills/pr-reviewer/: SKILL.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_github_url_and_container_id.py  0003_add_model_provider.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: definitions.py  engine.py  model_registry.py  prompts.py  providers.py  tools.py
backend/app/db/: database.py  models.py
backend/app/routes/: models.py  repos.py  stream.py  tasks.py
backend/app/security/: auth.py  command_runner.py  path_guard.py
backend/app/services/: agent_runner.py  container_manager.py  event_bus.py  pr_creator.py  process_manager.py  task_state.py  worktree.py
backend/tests/: conftest.py  test_agent_runner.py  test_agent_tools.py  test_auth.py  test_container_manager.py  test_pr_creator.py  test_task_state.py  test_tasks_routes.py
e2e/: package-lock.json  package.json  playwright.config.js
e2e/tests/: smoke.spec.js
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+2 more)
scripts/: pr-review-bundle.sh  pre-commit  pre-push  release  setup-hooks.sh  test_afip_homo.py  worktree  worktree-ports
worker/: Dockerfile
(+7 files in other folders)
