[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "orchestrator-backend"
version = "0.1.0"
description = "Backend API for orchestrating multi-agent coding tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "anthropic>=0.63.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.20.0",
  "pyyaml>=6.0.2",
  "gitpython>=3.1.44",
  "pydantic-settings>=2.7.1",
  "python-multipart>=0.0.20",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.2.0",
  "python-on-whales>=0.73.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.4",
  "mypy>=1.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
